@@ -1,4 +1,5 @@
-NEXT RELEASE
+NEXT VERSION
+ - Test o-core's ability to handle o.Type objects in o.writer.
  - Re-introduce is* methods for short-hand adhock validation.
 
 0.0.1 : 2013-05-15
